# cuda-ai-2026

./: README.md
default/1_gelu_omp/lukicheva_polina/: log.txt
default/1_gelu_omp/znamenskiy_mikhail/: CMakeLists.txt  gelu_omp.cpp  main.cpp
default/2_gelu_cuda/smirnov_denis/: gelu_cuda.cu
default/3_naive_gemm_cuda/pisarevsky_vadim/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/zinoviev_vladimir/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/zvorykin_aleksandr/: naive_gemm_cuda.cu
default/4_block_gemm_cuda/chervyakov_ivan/: block_gemm_cuda.cu
default/4_block_gemm_cuda/korobeynikov_aleksey/: block_gemm_cuda.cu
default/4_block_gemm_cuda/pisarevsky_vadim/: block_gemm_cuda.cu
default/4_block_gemm_cuda/rodygin_vadim/: block_gemm_cuda.cu
default/4_block_gemm_cuda/volkovskiy_pavel/: block_gemm_cuda.cu
default/4_block_gemm_cuda/zvorykin_aleksandr/: block_gemm_cuda.cpp  block_gemm_cuda.cu
default/5_gemm_cublas/malinin_nikita/: gemm_cublas.cu
default/5_gemm_cublas/pisarevsky_vadim/: gemm_cublas.cu  gemm_cublas.h
default/5_gemm_cublas/zemskov_roman/: gemm_cublas.cu  gemm_cublas.h
default/5_gemm_cublas/zvorykin_aleksandr/: gemm_cublas.cu
default/6_softmax_cuda/zemskov_roman/: softmax_cuda.cu  softmax_cuda.h
default/6_softmax_cuda/zinoviev_vladimir/: softmax_cuda.cu
default/7_layernorm_pycuda/ermilov_dmitry/: benchmark.py  layernorm_pycuda.py
default/7_layernorm_pycuda/pinegina_natalia/: layernorm_pycuda.py
default/7_layernorm_pycuda/salnikov_nikolay/: layernorm_pycuda.py
